// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the UseCaseStepDetailBuildingBlocks component. Should add a pill and revert changes on "Cancel" button click 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Building Blocks
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="bg-edit p-6"
    >
      <div
        class="flex flex-col gap-3"
      >
        <p
          class="card-title text-dial-stratos"
        >
          Assign
           
          Building Blocks
        </p>
        <label
          class="flex flex-col gap-y-2"
          data-testid="building-block-search"
        >
          Search and Assign Building Blocks
          <div
            class=" css-l45kjq-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-:r2:-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="react-select__control css-qv4grc-control"
            >
              <div
                class="react-select__value-container css-17t7gkf-ValueContainer"
              >
                <div
                  class="react-select__placeholder css-5rjclb-placeholder"
                  id="react-select-:r2:-placeholder"
                >
                  Type to search...
                </div>
                <div
                  class="react-select__input-container css-qbdosj-Input"
                  data-value=""
                >
                  <input
                    aria-autocomplete="list"
                    aria-describedby="react-select-:r2:-placeholder"
                    aria-expanded="false"
                    aria-haspopup="true"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class="react-select__input"
                    id="async-select-id-undefined"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 0; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="text-2xl"
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </label>
        <div
          class="flex flex-wrap gap-3 mt-5"
        >
          <div
            class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
            data-testid="pill"
          >
            Test Building Block
            <svg
              class="cursor-pointer opacity-50"
              data-testid="remove-button"
              fill="currentColor"
              height="1.5em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
              />
            </svg>
          </div>
          <div
            class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
            data-testid="pill"
          >
            Building Block 1
            <svg
              class="cursor-pointer opacity-50"
              data-testid="remove-button"
              fill="currentColor"
              height="1.5em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
              />
            </svg>
          </div>
          <div
            class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
            data-testid="pill"
          >
            Building Block 2
            <svg
              class="cursor-pointer opacity-50"
              data-testid="remove-button"
              fill="currentColor"
              height="1.5em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="submit-button"
          type="submit"
        >
          Submit
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the UseCaseStepDetailBuildingBlocks component. Should match snapshot - with edit permission. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Building Blocks
      </div>
      <div
        class="gap-3"
      >
        <button
          class="mr-2 inline-flex items-center gap-x-1.5 bg-dial-blue px-2 py-1 rounded-md text-white"
          data-testid="edit-button"
          type="button"
        >
          <img
            alt="Edit"
            height="12px"
            src="/icons/edit.svg"
            width="12px"
          />
          <span
            class="text-sm"
          >
            Edit
          </span>
        </button>
      </div>
    </div>
    <div
      class="flex flex-col gap-3"
    >
      <div
        class="grid grid-cols-3"
      >
        <div />
        <div />
        <div
          class="cursor-pointer hover:rounded-lg hover:shadow-lg border-2 border-transparent hover:border-dial-sunshine"
        >
          <div
            class="bg-white border border-dial-gray shadow-lg rounded-md"
          >
            <div
              class="flex flex-row flex-wrap px-4 py-3 false"
            >
              <div
                class="flex gap-2 my-auto text-dial-sapphire"
              >
                <div
                  class="block w-8 relative opacity-80"
                >
                  <span
                    style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
                  >
                    <img
                      alt="Logo for: Test Building Block"
                      data-nimg="fill"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: scale-down; object-position: left;"
                    />
                    <noscript />
                  </span>
                </div>
                Test Building Block
              </div>
              <div
                class="ml-auto flex gap-2 text-white"
              >
                <div
                  class="bg-dial-lavender rounded text-sm px-2 py-1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-b border-dashed border-dial-lavender"
      />
      <div
        class="grid grid-cols-1"
      />
    </div>
  </div>
</div>
`;

exports[`Unit tests for the UseCaseStepDetailBuildingBlocks component. Should match snapshot - with open editable section 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Building Blocks
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="bg-edit p-6"
    >
      <div
        class="flex flex-col gap-3"
      >
        <p
          class="card-title text-dial-stratos"
        >
          Assign
           
          Building Blocks
        </p>
        <label
          class="flex flex-col gap-y-2"
          data-testid="building-block-search"
        >
          Search and Assign Building Blocks
          <div
            class=" css-l45kjq-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-:r0:-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="react-select__control css-qv4grc-control"
            >
              <div
                class="react-select__value-container css-17t7gkf-ValueContainer"
              >
                <div
                  class="react-select__placeholder css-5rjclb-placeholder"
                  id="react-select-:r0:-placeholder"
                >
                  Type to search...
                </div>
                <div
                  class="react-select__input-container css-qbdosj-Input"
                  data-value=""
                >
                  <input
                    aria-autocomplete="list"
                    aria-describedby="react-select-:r0:-placeholder"
                    aria-expanded="false"
                    aria-haspopup="true"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class="react-select__input"
                    id="async-select-id-undefined"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="text-2xl"
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </label>
        <div
          class="flex flex-wrap gap-3 mt-5"
        >
          <div
            class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
            data-testid="pill"
          >
            Test Building Block
            <svg
              class="cursor-pointer opacity-50"
              data-testid="remove-button"
              fill="currentColor"
              height="1.5em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 512 512"
              width="1.5em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="submit-button"
          disabled=""
          type="submit"
        >
          Submit
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the UseCaseStepDetailBuildingBlocks component. Should match snapshot - without edit permission. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Building Blocks
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="flex flex-col gap-3"
    >
      <div
        class="grid grid-cols-3"
      >
        <div />
        <div />
        <div
          class="cursor-pointer hover:rounded-lg hover:shadow-lg border-2 border-transparent hover:border-dial-sunshine"
        >
          <div
            class="bg-white border border-dial-gray shadow-lg rounded-md"
          >
            <div
              class="flex flex-row flex-wrap px-4 py-3 false"
            >
              <div
                class="flex gap-2 my-auto text-dial-sapphire"
              >
                <div
                  class="block w-8 relative opacity-80"
                >
                  <span
                    style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
                  >
                    <img
                      alt="Logo for: Test Building Block"
                      data-nimg="fill"
                      decoding="async"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%; object-fit: scale-down; object-position: left;"
                    />
                    <noscript />
                  </span>
                </div>
                Test Building Block
              </div>
              <div
                class="ml-auto flex gap-2 text-white"
              >
                <div
                  class="bg-dial-lavender rounded text-sm px-2 py-1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="border-b border-dashed border-dial-lavender"
      />
      <div
        class="grid grid-cols-1"
      />
    </div>
  </div>
</div>
`;

exports[`Unit tests for the UseCaseStepDetailBuildingBlocks component. Should remove a pill 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="mt-12"
    data-testid="editable-section"
  >
    <div
      class="flex justify-between items-center mb-3"
    >
      <div
        class="card-title text-dial-sapphire"
      >
        Building Blocks
      </div>
      <div
        class="gap-3"
      />
    </div>
    <div
      class="bg-edit p-6"
    >
      <div
        class="flex flex-col gap-3"
      >
        <p
          class="card-title text-dial-stratos"
        >
          Assign
           
          Building Blocks
        </p>
        <label
          class="flex flex-col gap-y-2"
          data-testid="building-block-search"
        >
          Search and Assign Building Blocks
          <div
            class=" css-l45kjq-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-:r1:-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
            />
            <div
              class="react-select__control css-qv4grc-control"
            >
              <div
                class="react-select__value-container css-17t7gkf-ValueContainer"
              >
                <div
                  class="react-select__placeholder css-5rjclb-placeholder"
                  id="react-select-:r1:-placeholder"
                >
                  Type to search...
                </div>
                <div
                  class="react-select__input-container css-qbdosj-Input"
                  data-value=""
                >
                  <input
                    aria-autocomplete="list"
                    aria-describedby="react-select-:r1:-placeholder"
                    aria-expanded="false"
                    aria-haspopup="true"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class="react-select__input"
                    id="async-select-id-undefined"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="text-2xl"
                    fill="none"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </label>
        <div
          class="flex flex-wrap gap-3 mt-5"
        />
      </div>
      <div
        class="flex justify-end mt-8 gap-3 text-xl"
      >
        <button
          class="submit-button"
          data-testid="submit-button"
          type="submit"
        >
          Submit
        </button>
        <button
          class="cancel-button"
          data-testid="cancel-button"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
